--- a/adminpage.html
+++ b/adminpage.html
@@ -269,7 +269,7 @@
                                         participantScore = 8;
                                     } else if (actual1 === actual2 && predicted1 === predicted2) {
                                         participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > predictedScore2) || (actual1 < actual2 && predicted1 < predictedScore2)) {
+                                    } else if ((actual1 > actual2 && predicted1 > predicted2) || (actual1 < actual2 && predicted1 < predictedScore2)) {
                                         participantScore = 5;
                                     } else {
                                         participantScore = 0;
@@ -315,7 +315,7 @@
                                         participantScore = 8;
                                     } else if (actual1 === actual2 && predicted1 === predicted2) {
                                         participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > predicted2) || (actual1 < actual2 && predicted1 < predicted2)) {
+                                    } else if ((actual1 > actual2 && predicted1 > predicted2) || (actual1 < actual2 && predicted1 < predictedScore2)) {
                                         participantScore = 5;
                                     } else {
                                         participantScore = 0;
@@ -407,7 +407,7 @@
                                         participantScore = 8;
                                     } else if (actual1 === actual2 && predicted1 === predicted2) {
                                         participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > predicted2) || (actual1 < actual2 && predicted1 < predicted2)) {
+                                    } else if ((actual1 > actual2 && predicted1 > predictedScore2) || (actual1 < actual2 && predicted1 < predictedScore2)) {
                                         participantScore = 5;
                                     } else {
                                         participantScore = 0;
@@ -601,326 +601,6 @@
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
-        }
-    </script>
-
-    <h2>Tables</h2>
-
-    <div class="center">
-        <select id="dateSelector" onchange="generateScoresTable()">
-            <option value="Overall">Overall</option>
-        </select>
-    </div>
-    <div id="scoresTableContainer" class="center"></div>
-    <div class="center">
-        <button class="save-button" onclick="saveTableAsJPG()">Save Table as JPG</button>
-    </div>
-    <hr>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const startDate = new Date('2024-06-15');
-            const endDate = new Date('2024-07-15');
-            const dateSelector = document.getElementById('dateSelector');
-
-            for (let d = startDate; d <= endDate; d.setDate(d.getDate() + 1)) {
-                const dateOption = document.createElement('option');
-                const dateString = d.toLocaleString('default', { month: 'long', day: 'numeric' });
-                dateOption.value = dateString;
-                dateOption.text = dateString;
-                dateSelector.add(dateOption);
-            }
-
-            generateScoresTable();
-        });
-
-        async function generateScoresTable() {
-            try {
-                const response = await fetch('./jsons/participants.json');
-                const participants = await response.json();
-
-                const selectedDate = document.getElementById('dateSelector').value;
-                let scoresData = [];
-                let description = '';
-
-                for (const participant of participants.participants) {
-                    const csvResponse = await fetch(participant.scores);
-                    const csvData = await csvResponse.text();
-                    const participantRows = csvData.split('\n').map(row => row.split(','));
-
-                    let totalScore = 0;
-                    let dateScore = 0;
-
-                    for (const row of participantRows) {
-                        if (row.length === 6) {
-                            const score = parseInt(row[5]) || 0;
-                            totalScore += score;
-
-                            if (row[0] === selectedDate) {
-                                dateScore += score;
-                            }
-                        }
-                    }
-
-                    if (selectedDate === 'Overall') {
-                        scoresData.push({ name: participant.name, score: totalScore });
-                        description = 'Overall Ranking';
-                    } else {
-                        scoresData.push({ name: participant.name, score: dateScore });
-                        description = `Ranking for Games on ${selectedDate}`;
-                    }
-                }
-
-                scoresData.sort((a, b) => b.score - a.score);
-
-                let tableHTML = `<h2>${description}</h2>`;
-                tableHTML += '<table>';
-                tableHTML += '<tr><th>Rank</th><th>Participant</th><th>Score</th></tr>';
-
-                scoresData.forEach((data, index) => {
-                    tableHTML += `<tr><td>${index + 1}</td><td>${data.name}</td><td>${data.score}</td></tr>`;
-                });
-
-                tableHTML += '</table>';
-
-                document.getElementById('scoresTableContainer').innerHTML = tableHTML;
-            } catch (error) {
-                console.error('Error generating scores table:', error);
-            }
-        }
-
-        function saveTableAsJPG() {
-            const tableContainer = document.getElementById('scoresTableContainer');
-            html2canvas(tableContainer, { backgroundColor: null, useCORS: true }).then(canvas => {
-                const link = document.createElement('a');
-                link.download = 'Rankings.jpg';
-                link.href = canvas.toDataURL('image/jpeg');
-                link.click();
-            });
-        }
-    </script>
-
-    <h2>gamebygame Results</h2>
-
-    <div class="dropdown-container">
-        <label for="country1-1">Country 1:</label>
-        <select id="country1-1">
-            <option value="">Select...</option>
-        </select>
-        <label for="country2-1">Country 2:</label>
-        <select id="country2-1">
-            <option value="">Select...</option>
-        </select>
-    </div>
-    <div class="dropdown-container">
-        <label for="country1-2">Country 1:</label>
-        <select id="country1-2">
-            <option value="">Select...</option>
-        </select>
-        <label for="country2-2">Country 2:</label>
-        <select id="country2-2">
-            <option value="">Select...</option>
-        </select>
-    </div>
-    <div class="dropdown-container">
-        <label for="country1-3">Country 1:</label>
-        <select id="country1-3">
-            <option value="">Select...</option>
-        </select>
-        <label for="country2-3">Country 2:</label>
-        <select id="country2-3">
-            <option value="">Select...</option>
-        </select>
-    </div>
-    <div class="dropdown-container">
-        <label for="country1-4">Country 1:</label>
-        <select id="country1-4">
-            <option value="">Select...</option>
-        </select>
-        <label for="country2-4">Country 2:</label>
-        <select id="country2-4">
-            <option value="">Select...</option>
-        </select>
-    </div>
-
-    <div id="error-message" class="error-message"></div>
-
-    <div id="results-container">
-        <div id="resultsContainer-1" class="center"></div>
-        <div id="resultsContainer-2" class="center"></div>
-        <div id="resultsContainer-3" class="center"></div>
-        <div id="resultsContainer-4" class="center"></div>
-    </div>
-
-    <div class="center">
-        <button class="capture-button" onclick="captureScreenshot()">Capture Screenshot</button>
-    </div>
-
-    <script>
-        const countries = {
-            'Germany': 'https://flagcdn.com/w20/de.png',
-            'Scotland': 'https://flagcdn.com/w20/gb-sct.png',
-            'Hungary': 'https://flagcdn.com/w20/hu.png',
-            'Switzerland': 'https://flagcdn.com/w20/ch.png',
-            'Spain': 'https://flagcdn.com/w20/es.png',
-            'Croatia': 'https://flagcdn.com/w20/hr.png',
-            'Italy': 'https://flagcdn.com/w20/it.png',
-            'Albania': 'https://flagcdn.com/w20/al.png',
-            'Serbia': 'https://flagcdn.com/w20/rs.png',
-            'England': 'https://flagcdn.com/w20/gb-eng.png',
-            'Slovenia': 'https://flagcdn.com/w20/si.png',
-            'Denmark': 'https://flagcdn.com/w20/dk.png',
-            'Poland': 'https://flagcdn.com/w20/pl.png',
-            'Netherlands': 'https://flagcdn.com/w20/nl.png',
-            'Austria': 'https://flagcdn.com/w20/at.png',
-            'France': 'https://flagcdn.com/w20/fr.png',
-            'Romania': 'https://flagcdn.com/w20/ro.png',
-            'Ukraine': 'https://flagcdn.com/w20/ua.png',
-            'Belgium': 'https://flagcdn.com/w20/be.png',
-            'Slovakia': 'https://flagcdn.com/w20/sk.png',
-            'Turkey': 'https://flagcdn.com/w20/tr.png',
-            'Georgia': 'https://flagcdn.com/w20/ge.png',
-            'Portugal': 'https://flagcdn.com/w20/pt.png',
-            'Czechia': 'https://flagcdn.com/w20/cz.png'
-        };
-
-        document.addEventListener('DOMContentLoaded', function () {
-            for (let i = 1; i <= 4; i++) {
-                const country1Select = document.getElementById(`country1-${i}`);
-                const country2Select = document.getElementById(`country2-${i}`);
-
-                for (const country in countries) {
-                    const option1 = document.createElement('option');
-                    option1.value = country;
-                    option1.text = country;
-                    country1Select.add(option1);
-
-                    const option2 = document.createElement('option');
-                    option2.value = country;
-                    option2.text = country;
-                    country2Select.add(option2);
-                }
-
-                country1Select.addEventListener('change', () => showPredictions(i));
-                country2Select.addEventListener('change', () => showPredictions(i));
-            }
-        });
-
-        async function showPredictions(moduleNumber) {
-            const country1 = document.getElementById(`country1-${moduleNumber}`).value;
-            const country2 = document.getElementById(`country2-${moduleNumber}`).value;
-            const errorMessage = document.getElementById('error-message');
-            const resultsContainer = document.getElementById(`resultsContainer-${moduleNumber}`);
-            resultsContainer.innerHTML = '';
-            errorMessage.innerHTML = '';
-
-            if (!country1 || !country2) {
-                return;
-            }
-
-            if (country1 === country2) {
-                errorMessage.innerHTML = `The name of the two countries should be different for set ${moduleNumber}.`;
-                return;
-            }
-
-            const response = await fetch('./jsons/participants.json');
-            const participants = await response.json();
-
-            const actualResultsResponse = await fetch('./results_csv/Actual_Results.csv');
-            const actualResultsData = await actualResultsResponse.text();
-            const actualResultsRows = actualResultsData.split('\n').map(row => row.split(','));
-
-            let actualResult = ['', ''];
-
-            for (const row of actualResultsRows) {
-                if (row.includes(country1) && row.includes(country2)) {
-                    const country1Index = row.indexOf(country1);
-                    const country2Index = row.indexOf(country2);
-                    actualResult[0] = row[country1Index + 1];
-                    actualResult[1] = row[country2Index + 1];
-                    break;
-                }
-            }
-
-            let headerHTML = `<h2><img src="${countries[country1]}" alt="${country1} flag"> ${country1} ${actualResult[0]} - ${actualResult[1]} ${country2} <img src="${countries[country2]}" alt="${country2} flag"></h2>`;
-            let tableHTML = '<table>';
-            tableHTML += '<tr><th>Participant</th>';
-            participants.participants.forEach(participant => {
-                tableHTML += `<th colspan="2">${participant.name}</th>`;
-            });
-            tableHTML += '</tr>';
-            tableHTML += '<tr><th>Teams</th>';
-            participants.participants.forEach(participant => {
-                tableHTML += `<td><img src="${countries[country1]}" alt="${country1} flag"></td><td><img src="${countries[country2]}" alt="${country2} flag"></td>`;
-            });
-            tableHTML += '</tr>';
-            tableHTML += '<tr><th>Predicted Scores</th>';
-            let scoresRowHTML = '<tr><th>Scores</th>';
-            let matchFound = false;
-
-            for (const participant of participants.participants) {
-                const csvResponse = await fetch(participant.scores);
-                const csvData = await csvResponse.text();
-                const rows = csvData.split('\n').map(row => row.split(','));
-
-                let participantPrediction = '';
-                let participantScore = 0;
-                for (const row of rows) {
-                    if (row.includes(country1) && row.includes(country2)) {
-                        const country1Index = row.indexOf(country1);
-                        const country2Index = row.indexOf(country2);
-                        const country1Score = row[country1Index + 1];
-                        const country2Score = row[country2Index + 1];
-                        participantPrediction = [country1Score, country2Score];
-                        matchFound = true;
-
-                        const actualScore1 = parseInt(actualResult[0]);
-                        const actualScore2 = parseInt(actualResult[1]);
-                        const predictedScore1 = parseInt(country1Score);
-                        const predictedScore2 = parseInt(country2Score);
-
-                        if (predictedScore1 === actualScore1 && predictedScore2 === actualScore2) {
-                            participantScore = 10;
-                        } else if ((actualScore1 - actualScore2 === predictedScore1 - predictedScore2) && (actualScore1 > actualScore2 && predictedScore1 > predictedScore2 || actualScore1 < actualScore2 && predictedScore1 < predictedScore2)) {
-                            participantScore = 8;
-                        } else if (actualScore1 === actualScore2 && predictedScore1 === predictedScore2) {
-                            participantScore = 5;
-                        } else if ((actualScore1 > actualScore2 && predictedScore1 > predictedScore2) || (actualScore1 < actualScore2 && predictedScore1 < predictedScore2)) {
-                            participantScore = 5;
-                        } else {
-                            participantScore = 0;
-                        }
-                        break;
-                    }
-                }
-                if (participantPrediction.length > 0) {
-                    tableHTML += `<td>${participantPrediction[0]}</td><td>${participantPrediction[1]}</td>`;
-                } else {
-                    tableHTML += '<td>N/A</td><td>N/A></td>';
-                }
-                scoresRowHTML += `<td colspan="2">${participantScore}</td>`;
-            }
-
-            tableHTML += '</tr>';
-            tableHTML += scoresRowHTML + '</tr>';
-            tableHTML += '</table>';
-
-            if (!matchFound) {
-                resultsContainer.innerHTML = `<p>No matches found between ${country1} and ${country2} in participant predictions.</p>`;
-            } else {
-                resultsContainer.innerHTML = headerHTML + tableHTML;
-            }
-        }
-
-        async function captureScreenshot() {
-            const element = document.getElementById('results-container');
-            const canvas = await html2canvas(element, { backgroundColor: null, useCORS: true });
-            const imgData = canvas.toDataURL('image/jpeg');
-            const link = document.createElement('a');
-            link.href = imgData;
-            link.download = 'gamebygame.jpg';
-            link.click();
         }
     </script>
     <hr>
